--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 @import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
+
+:root {
+  --primary-color: "#00AA5B"
+}
+
 
 .slug {
   background-image: url('/images/cover-slug.png');
